--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,7 +28,7 @@ body{
 .icon-bar a{
   text-decoration: none;
   color: white;
-  cursor: auto;
+  cursor: pointer;
 }
 .profile{
   display: inline-block;
@@ -133,6 +133,9 @@ body{
     display:block;
     width:100%;
   }
+  .project-panel.rev{
+    direction: ltr;
+  } 
 }
 
 @media screen and (max-width: 480px) {
@@ -142,4 +145,38 @@ body{
   .profile-slg{
     font-size: 2.5em;
   }
+}
+
+/* Pop */
+@-webkit-keyframes hvr-pop {
+  50% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+}
+
+@keyframes hvr-pop {
+  50% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+}
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
