--- a/css/pfos.css
+++ b/css/pfos.css
@@ -2,37 +2,347 @@ body{
   margin: 0;
   display: block;
   font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+  background-image:url("../images/background.png");
+  background-size: 100%;
 }
+/* styling for hamburger mobile navigation */
+.mobile-nav{
+  display:none;
+  margin:10px 0 5px 10px;
+  font-size:15px;
+}
+.mobile-menu{
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  -webkit-padding-start: 0;
+  display:none;
+  background-color:black;
+  position:absolute;
+  list-style-type:none;
+  margin-top: 5px;
+  margin-left:10px;
+  padding-left:10px;
+  padding-right:10px;
+  transform : scale(1.1,1);
+  -webkit-transform:scale(1.1,1); /* Safari and Chrome */
+  -moz-transform:scale(1.1,1); /* Firefox */
+  -ms-transform:scale(1.1,1); /* IE 9+ */
+  -o-transform:scale(1.1,1);
+  z-index:5;
+}
+.mobile-menu li{
+  display:block;
+  margin:10px 0;
+  cursor:pointer;
+}
+.menu-ham{
+  padding:10px;
+  cursor:pointer;
+}
+#menu-toggle{
+  display:none;
+}
+#menu-toggle:checked + .mobile-menu {
+  display: block;
+}
+/* styling for web menu bar */
 .menu-bar{
   display:inline-block;
   width:100%;
   background-color:#000;
   color:#e8ba92;
-}
-.navigation{
-  display:inline-block;
-  list-style-type:none;
-  font-size:25px;
-  margin:10px;
-  padding:0;
   font-weight:900;
 }
-.navigation li{
+.menu-bar ul li:hover, .menu-bar ul li:focus, .menu-bar ul li:active {
+  color:#fff;
+}
+.web-nav{
+  display:inline-block;
+  list-style-type:none;
+  font-size:22px;
+  margin:10px;
+  padding:0;
+}
+.web-nav li{
   display:inline-block;
   margin:0 20px;
+  cursor:pointer;
+  transform : scale(1.1,1);
+  -webkit-transform:scale(1.1,1); /* Safari and Chrome */
+  -moz-transform:scale(1.1,1); /* Firefox */
+  -ms-transform:scale(1.1,1); /* IE 9+ */
+  -o-transform:scale(1.1,1);
 }
+/* styling for icon bar (twitter, youtube, facebook) */
 .icon-bar{
   display:inline-block;
   float:right;
   padding-right:20px;
 }
 .icon-bar img{
+  margin-top:2px;
   padding:6px 15px;
   height:2em;
   width:2em;
 }
 .icon-bar a{
   text-decoration:none;
-  color:white;
   cursor:pointer;
+}
+/* styling for PFOS logo */
+.title{
+  display:inline-block;
+  width:35%;
+}
+.title img{
+  width:100%;
+}
+.pfos-info{
+  position:absolute;
+  display:inline-block;
+  top:50px;
+  right:0;
+  width:67%;
+}
+.group-bg{
+  position:absolute;
+  top:50px;
+  right:0;
+  width:85%;
+  z-index:-1;
+}
+.group-photo{
+  width:100%;
+}
+/* styling for guest performances*/
+.guest-artist-container{
+  padding: 0 4%;
+  display:block;
+  width:25%;
+  text-align:center;
+}
+/* image size 600x400 */
+.guest-artist-l{
+  display:inline-block;
+  width:100%;
+  margin:10px 0;
+}
+/* image size 400x500 */
+.guest-artist-ml{
+  display:inline-block;
+  width:46%;
+  padding-right:3%;
+  margin:10px 0;
+}
+.guest-artist-mr{
+  display:inline-block;
+  width:46%;
+  padding-left:3%;
+  margin:10px 0;
+}
+
+.guest-header{
+  text-align:center;
+  font-size:1.5vw;
+  font-weight:700;
+  margin: 0;
+  padding:10px;
+  color:#E2DBD2;
+  transform : scale(1,1.2);
+  -webkit-transform:scale(1,1.2); /* Safari and Chrome */
+  -moz-transform:scale(1,1.2); /* Firefox */
+  -ms-transform:scale(1,1.2); /* IE 9+ */
+  -o-transform:scale(1,1.2);
+}
+.guest-artist-image{
+  border:2px solid #AB5627;
+  width:100%;
+}
+.guest-artist-name{
+  display:inline-block;
+  height:3vw;
+  text-align:center;
+  font-size:1vw;
+  font-weight:300;
+  margin:0;
+  padding:1px;
+  color:#E2DBD2;
+}
+.guest-artist-name p{
+  display:inline-block;
+  text-align:center;
+  font-size:1vw;
+  font-weight:300;
+  margin:0;
+  padding:1vw 5px;
+  color:#efefef;
+}
+.playbutton{
+  height:3vw;
+  vertical-align:middle;
+}
+.pfos-story-container{
+  display:inline-block;
+  padding:20px 5vw;
+}
+.story{
+  text-align:center;
+  font-size:2vw;
+  line-height:150%;
+  font-weight:500;
+  color:#F0C394;
+  transform : scale(1,1.1);
+  -webkit-transform:scale(1,1.1); /* Safari and Chrome */
+  -moz-transform:scale(1,1.1); /* Firefox */
+  -ms-transform:scale(1,1.1); /* IE 9+ */
+  -o-transform:scale(1,1.1);
+}
+.story p{
+  margin: 0;
+  padding: 0;
+}
+.buttons{
+  text-align:center;
+  margin-top:20px;
+  padding:40px;
+}
+.play-icon{
+  display:inline-block;
+  margin-top:10px;
+  width:0;
+  height:0;
+  border-top: 0.75vw solid transparent;
+  border-left: 1.5vw solid white;
+  border-bottom: 0.75vw solid transparent;
+}
+.pfos-button.right{
+  float:right;
+}
+.pfos-button.left{
+  float:left;
+}
+.pfos-button{
+  border:4px solid #D4BEAA;
+  border-radius:16px;
+  width: 40%;
+  display:inline-block;
+  background-color:#5F4D39;
+  padding:0;
+  color:#E2EBE2;
+  cursor:pointer;
+}
+.pfos-button p{
+  display:inline-block;
+  width:80%;
+  font-size:1.5vw;
+  margin:0;
+  padding:0;
+  line-height:200%;
+}
+.pfos-button:hover, .pfos-button:focus, .pfos-button:active {
+  background-color:#774D25;
+}
+/* switch to hamburger menu */
+@media screen and (max-width: 1000px) {
+  .web-nav{
+    display:none;
+  }
+  .mobile-nav{
+    display:inline-block;
+  }
+  .pfos-info{
+    top:34px;
+  }
+  .icon-bar{
+    padding-right:10px;
+    margin-top:4px;
+  }
+  .icon-bar img{
+    padding:0 10px;
+    height:1.5em;
+    width:1.5em;
+  }
+  .guest-artist-ml{
+    padding-right:2%;
+  }
+  .guest-artist-mr{
+    padding-left:2%;
+  }
+  .group-bg{
+    top:34px;
+  }
+  .pfos-button{
+    border:3px solid #D4BEAA;
+    border-radius:10px;
+  }
+}
+/* mobile phone screen size */
+@media screen and (max-width: 800px) {
+  .title {
+    position:absolute;
+    right:0;
+    top:36px;
+    z-index:100;
+    width: 35%;
+  }
+  .pfos-info{
+    position:relative;
+    display:block;
+    width:100%;
+    top:0;
+  }
+  .guest-artist-container{
+    display:block;
+    width:92%;
+  }
+  .story{
+    font-size:3vw;
+  }
+  .play-icon{
+    border-top: 1vw solid transparent;
+    border-left: 2vw solid white;
+    border-bottom: 1vw solid transparent;
+  }
+  .pfos-button{
+    border:2px solid #D4BEAA;
+    border-radius: 8px;
+  }
+  .pfos-button p{
+    font-size:2vw;
+  }
+  .guest-header{
+    font-size:3vw;
+  }
+  .guest-artist-name{
+    height:5vw;
+    font-size:2.5vw;
+  }
+  .guest-artist-name p{
+    font-size:2.5vw;
+  }
+  .playbutton{
+    height:5vw;
+  }
+}
+
+/* grows on hover */
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
